[project]
name = "projec"
version = "0.1.0"
description = ""
authors = [
    {name = "tyagiayush990",email = "tyagiayush990@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "sqlmodel (>=0.0.37,<0.0.38)"
]

[tool.poetry]
packages = [{include = "projec", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
